# guisu

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  .rust-analyzer.toml  .rustfmt.toml  .typos.toml  Cargo.toml  Justfile  LICENSE  README-zh.md  README.md  commitlint.config.ts  mise.toml  rust-toolchain.toml
.github/workflows/: pre-commit.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: command.rs  common.rs  conflict.rs  error.rs  lib.rs  logging.rs  main.rs  stats.rs
crates/cli/src/cmd/: add.rs  age.rs  apply.rs  cat.rs  conflict.rs  diff.rs  edit.rs  hooks.rs  ignored.rs  info.rs  init.rs  mod.rs  status.rs  templates.rs  update.rs  variables.rs
crates/cli/src/ui/: diffviewer.rs  editor.rs  icons.rs  merge.rs  mod.rs  preview.rs  progress.rs  prompt.rs  theme.rs  viewer.rs
crates/cli/src/utils/: hooks.rs  mod.rs  path.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  config_info.rs  dirs.rs  git.rs  hooks.rs  ignores.rs  lib.rs  logging.rs  matcher.rs  patterns.rs  variables.rs
crates/config/tests/: ignore_patterns.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  path.rs  platform.rs  traits.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: age.rs  identity.rs  lib.rs  recipient.rs
crates/crypto/tests/: integration.rs
crates/engine/: Cargo.toml
crates/engine/benches/: state_benchmarks.rs
crates/engine/src/: attr.rs  content.rs  database.rs  entry.rs  error.rs  git.rs  hash.rs  lib.rs  processor.rs  state.rs  state_validator.rs  system.rs
crates/engine/src/adapters/: crypto.rs  mod.rs  template.rs
crates/engine/src/hooks/: config.rs  executor.rs  loader.rs  mod.rs  state.rs
crates/template/: Cargo.toml
crates/template/src/: config_info.rs  context.rs  engine.rs  functions.rs  info.rs  lib.rs  parser.rs
crates/vault/: Cargo.toml  README.md
crates/vault/src/: bw.rs  bws.rs  lib.rs
docs/: codebase_redundancy_analysis.md
docs/architecture/: components.md  containers.md  data-flow.md
docs/architecture/diagrams/: c4-components.mmd  c4-containers.mmd  c4-context.mmd  data-flow.mmd  state-machine.mmd
docs/development/: CONTRIBUTING.md  ROADMAP.md
