[workspace]
members = [
  "crates/cli",
  "crates/config",
  "crates/core",
  "crates/crypto",
  "crates/engine",
  "crates/template",
  "crates/vault",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Yihuang Yu <yuyihuang@live.com>"]
license-file = "LICENSE"
repository = "https://github.com/PaulYuuu/guisu"
homepage = "https://github.com/PaulYuuu/guisu"
keywords = ["dotfiles manager"]
documentation = "https://github.com/PaulYuuu/guisu"

[workspace.dependencies]
age = { version = "0.11", features = ["ssh", "armor"] }
anyhow = "1.0"
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
bitflags = "2.6"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
crossterm = "0.29"
dirs = "6.0"
duct = "1.1"
git2 = "0.20"
ignore = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
indicatif = "0.18"
libc = "0.2"
miette = { version = "7.6", features = ["fancy"] }
minijinja = { version = "2.12", features = ["builtins", "loader"] }
once_cell = "1.19"
os_info = "3.9"
ratatui = "0.29"
rayon = "1.10"
redb = "3.1"
regex = "1.11"
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.7"
subtle = "2.6"
tempfile = "3.23"
terminal_size = "0.4"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt", "macros"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
vergen = { version = "9.0", features = ["build", "rustc"] }
vergen-git2 = { version = "1.0", features = ["build"] }
walkdir = "2.5"
which = "8.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
