[workspace]
members = [
  "crates/cli",
  "crates/config",
  "crates/core",
  "crates/crypto",
  "crates/engine",
  "crates/template",
  "crates/vault",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Yihuang Yu <yuyihuang@live.com>"]
license-file = "LICENSE"
repository = "https://github.com/PaulYuuu/guisu"
homepage = "https://github.com/PaulYuuu/guisu"
keywords = ["dotfiles"]
documentation = "https://github.com/PaulYuuu/guisu"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
unwrap_used = "deny"
todo = "warn"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
crossterm = "0.29"
ratatui = "0.29"
terminal_size = "0.4"
indicatif = "0.18"

anyhow = "1.0"
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
bincode = { version = "2.0", features = ["serde"] }

age = { version = "0.11", features = ["ssh", "armor"] }
secrecy = "0.10"
sha2 = "0.10"
subtle = "2.6"
base64 = "0.22"

dirs = "6.0"
ignore = "0.4"
walkdir = "2.5"
tempfile = "3.23"
which = "8.0"

minijinja = { version = "2.12", features = ["builtins", "loader"] }
regex = "1.11"

indexmap = { version = "2.0", features = ["serde"] }
bitflags = "2.6"

rayon = "1.10"

redb = "3.1"
git2 = "0.20"
similar = "2.7"
os_info = "3.9"
libc = "0.2"
chrono = "0.4"
duct = "1.1"
shell-words = "1.1"
blake3 = "1.5"
hex = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "ansi",
] }

vergen = { version = "9.0", features = ["build", "rustc"] }
vergen-git2 = { version = "1.0", features = ["build"] }

assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.2"
temp-env = "0.3"

criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
