[package]
name = "guisu-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[lib]
name = "guisu_config"

[dependencies]
guisu-core = { path = "../core" }
guisu-crypto = { path = "../crypto" }

dirs.workspace = true
duct.workspace = true
git2.workspace = true
glob = "0.3"
indexmap.workspace = true
rayon.workspace = true
redb.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
which.workspace = true
xdg = "3.0"
