[package]
name = "guisu-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[lib]
name = "guisu_config"

[dependencies]
guisu-core = { path = "../core" }
guisu-crypto = { path = "../crypto" }

dirs.workspace = true
glob = "0.3"
indexmap.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
xdg = "3.0"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
