[package]
name = "guisu-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Processing engine for guisu dotfile manager"

[lib]
name = "guisu_engine"

[dependencies]
guisu-config = { path = "../config" }
guisu-core = { path = "../core" }
guisu-crypto = { path = "../crypto" }
guisu-template = { path = "../template" }
guisu-vault = { path = "../vault" }

bincode.workspace = true
bitflags.workspace = true
chrono.workspace = true
dirs.workspace = true
duct.workspace = true
ignore.workspace = true
os_info.workspace = true
rayon.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true
which.workspace = true
